--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MindAR GitHub Pages</title>
+    <meta charset="UTF-8" />
+    <title>MindAR Test</title>
+
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.3.0/dist/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
-    <style>
-      body { margin: 0; overflow: hidden; }
-    </style>
+
+    <style>body { margin: 0; }</style>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: target.mind;" 
-             color-space="sRGB" 
-             embedded 
-             renderer="colorManagement: true, physicallyCorrectLights" 
-             vr-mode-ui="enabled: false" 
+    <a-scene mindar-image="imageTargetSrc: target.mind;" embedded color-space="sRGB"
+             renderer="colorManagement: true, physicallyCorrectLights"
+             vr-mode-ui="enabled: false"
              device-orientation-permission-ui="enabled: true">
-
-      <a-assets>
-        <a-asset-item id="model" src="assets/seu_modelo.glb"></a-asset-item>
-      </a-assets>
-
+      
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model src="#model" position="0 0 0" scale="0.1 0.1 0.1"></a-gltf-model>
+        <a-text value="Alvo encontrado!" color="red" position="0 0 0" align="center"></a-text>
       </a-entity>
+
     </a-scene>
   </body>
 </html>
