--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Test</title>
+    <title>MindAR Demo</title>
 
+    <!-- 1. MindAR core -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aframe@1.3.0/dist/aframe.min.js"></script>
+
+    <!-- 2. A-Frame -->
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+
+    <!-- 3. MindAR plugin para A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
-    <style>body { margin: 0; }</style>
+    <style>
+      body { margin: 0; overflow: hidden; }
+    </style>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: target.mind;" embedded color-space="sRGB"
-             renderer="colorManagement: true, physicallyCorrectLights"
-             vr-mode-ui="enabled: false"
-             device-orientation-permission-ui="enabled: true">
-      
+    <a-scene mindar-image="imageTargetSrc: assets/target.mind;" embedded>
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-text value="Alvo encontrado!" color="red" position="0 0 0" align="center"></a-text>
+        <a-text value="Alvo detectado!" color="yellow" position="0 0 0"></a-text>
       </a-entity>
-
     </a-scene>
   </body>
 </html>
