--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Demo</title>
+    <title>MindAR Demo com Lista Animada</title>
 
-    <!-- 1. MindAR core -->
+    <!-- MindAR core -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
 
-    <!-- 2. A-Frame -->
+    <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
-    <!-- 3. MindAR plugin para A-Frame -->
+    <!-- MindAR A-Frame plugin -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
     <style>
@@ -21,6 +21,7 @@
         padding: 0;
         height: 100%;
         width: 100%;
+        background-color: black;
       }
 
       a-scene {
@@ -42,45 +43,69 @@
       device-orientation-permission-ui="enabled: true"
     >
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
       <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes-container" position="0 0 0">
-        <!-- <a-text
+        <a-text
           value="Alvo detectado!"
           color="yellow"
-          position="0 0 0"
-        ></a-text> -->
+          position="0 0.9 0"
+          align="center"
+          scale="1 1 1"
+        ></a-text>
       </a-entity>
     </a-scene>
+
     <script>
-      // Carrega o JSON com os nomes
       fetch("assets/nomes.json")
         .then((res) => res.json())
         .then((nomes) => {
           const container = document.querySelector("#lista-nomes-container");
+          const texts = [];
 
-          nomes.forEach((nome, index) => {
-            // Criar o <a-text> com texto vazio inicialmente
+          let index = 0;
+
+          function typeWriter(text, element, i = 0) {
+            if (i <= text.length) {
+              element.setAttribute("value", text.substring(0, i));
+              setTimeout(() => typeWriter(text, element, i + 1), 100);
+            } else {
+              // Aguarda um tempo e mostra o próximo nome
+              setTimeout(showNextName, 1000);
+            }
+          }
+
+          function showNextName() {
+            if (index >= nomes.length) return;
+
+            // Move todos os textos existentes para cima
+            texts.forEach((el) => {
+              const pos = el.getAttribute("position");
+              const newY = pos.y + 0.3;
+              el.setAttribute("position", `0 ${newY} 0`);
+            });
+
+            // Remove textos que subiram demais (ex: y > 1.5)
+            while (texts.length > 0 && texts[0].getAttribute("position").y > 1.5) {
+              const oldEl = texts.shift();
+              container.removeChild(oldEl);
+            }
+
+            // Cria novo texto na posição inicial (embaixo)
+            const nome = nomes[index];
             const el = document.createElement("a-text");
             el.setAttribute("value", "");
             el.setAttribute("color", "yellow");
             el.setAttribute("align", "center");
-            el.setAttribute("position", `0 ${0.3 - index * 0.3} 0`);
+            el.setAttribute("position", `0 0 0`);
             el.setAttribute("scale", "0.8 0.8 0.8");
-
             container.appendChild(el);
+            texts.push(el);
 
-            // Função para animar o texto letra a letra
-            function typeWriter(text, element, i = 0) {
-              if (i <= text.length) {
-                element.setAttribute("value", text.substring(0, i));
-                setTimeout(() => typeWriter(text, element, i + 1), 100);
-              }
-            }
+            typeWriter(nome, el);
+            index++;
+          }
 
-            // Iniciar a animação para cada nome com atraso para não sobrepor as animações
-            setTimeout(() => {
-              typeWriter(nome, el);
-            }, index * 1500); // cada nome inicia após 1.5 segundos do anterior
-          });
+          showNextName();
         });
     </script>
   </body>
