--- a/index.html
+++ b/index.html
@@ -1,68 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>Teste MindAR Simples</title>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
-  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
-  <style>
-    html, body {
-      margin:0; padding:0; overflow:hidden; background:black;
-      height:100%; width:100%;
-    }
-    a-scene {
-      position:absolute; top:0; left:0; height:100% !important; width:100% !important;
-    }
-  </style>
-</head>
-<body>
-  <a-scene mindar-image="imageTargetSrc: assets/target.mind;" embedded vr-mode-ui="enabled:false" device-orientation-permission-ui="enabled:true">
-    <a-camera position="0 0 0" look-controls="enabled:false"></a-camera>
-    <a-entity mindar-image-target="targetIndex: 0" id="container" position="0 0 -0.5">
-    </a-entity>
-  </a-scene>
+  <head>
+    <meta charset="UTF-8" />
+    <title>MindAR Demo com Lista Animada</title>
 
-  <script>
-    const nomes = [
-      "Leitor Alfa",
-      "Apoiadora Beta",
-      "Colaborador Gama",
-      "Supervisor Delta",
-      "Parceiro Épsilon"
-    ];
+    <!-- MindAR core -->
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
 
-    const container = document.querySelector("#container");
-    let i = 0;
+    <!-- A-Frame -->
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
-    function typeWriter(text, element, pos = 0, callback) {
-      if (pos <= text.length) {
-        element.setAttribute("value", text.substring(0, pos));
-        setTimeout(() => typeWriter(text, element, pos + 1, callback), 100);
-      } else {
-        if (callback) callback();
+    <!-- MindAR A-Frame plugin -->
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+
+    <style>
+      html,
+      body {
+        margin: 0;
+        overflow: hidden;
+        padding: 0;
+        height: 100%;
+        width: 100%;
+        background-color: black;
       }
-    }
 
-    function showNext() {
-      if(i >= nomes.length) return;
+      a-scene {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100% !important;
+        width: 100% !important;
+      }
+    </style>
+  </head>
+  <body>
+    <a-scene
+      mindar-image="imageTargetSrc: assets/target.mind;"
+      embedded
+      color-space="sRGB"
+      renderer="colorManagement: true, physicallyCorrectLights"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true"
+    >
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      const el = document.createElement("a-text");
-      el.setAttribute("value", "");
-      el.setAttribute("color", "yellow");
-      el.setAttribute("align", "center");
-      el.setAttribute("position", `0 ${0.3 - i*0.3} 0`);
-      el.setAttribute("scale", "0.8 0.8 0.8");
+      <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes-container" position="0 0 0">
+        <a-text
+          value="Alvo detectado!"
+          color="yellow"
+          position="0 0.9 0"
+          align="center"
+          scale="1 1 1"
+        ></a-text>
+      </a-entity>
+    </a-scene>
 
-      container.appendChild(el);
+    <script>
+      fetch("assets/nomes.json")
+        .then((res) => res.json())
+        .then((nomes) => {
+          const container = document.querySelector("#lista-nomes-container");
+          const texts = [];
 
-      typeWriter(nomes[i], el, 0, () => {
-        i++;
-        setTimeout(showNext, 500);
-      });
-    }
+          let index = 0;
 
-    showNext();
-  </script>
-</body>
+          function typeWriter(text, element, i = 0) {
+            if (i <= text.length) {
+              element.setAttribute("value", text.substring(0, i));
+              setTimeout(() => typeWriter(text, element, i + 1), 100);
+            } else {
+              // Aguarda um tempo e mostra o próximo nome
+              setTimeout(showNextName, 1000);
+            }
+          }
+
+          function showNextName() {
+            if (index >= nomes.length) return;
+
+            // Move todos os textos existentes para cima
+            texts.forEach((el) => {
+              const pos = el.getAttribute("position");
+              const newY = pos.y + 0.3;
+              el.setAttribute("position", `0 ${newY} 0`);
+            });
+
+            // Remove textos que subiram demais (ex: y > 1.5)
+            while (texts.length > 0 && texts[0].getAttribute("position").y > 1.5) {
+              const oldEl = texts.shift();
+              container.removeChild(oldEl);
+            }
+
+            // Cria novo texto na posição inicial (embaixo)
+            const nome = nomes[index];
+            const el = document.createElement("a-text");
+            el.setAttribute("value", "");
+            el.setAttribute("color", "yellow");
+            el.setAttribute("align", "center");
+            el.setAttribute("position", `0 0 0`);
+            el.setAttribute("scale", "0.8 0.8 0.8");
+            container.appendChild(el);
+            texts.push(el);
+
+            typeWriter(nome, el);
+            index++;
+          }
+
+          showNextName();
+        });
+    </script>
+  </body>
 </html>
