--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Demo com Lista Animada</title>
+    <title>MindAR Demo com Tipagem de Texto</title>
 
-    <!-- MindAR core -->
+    <!-- 1. MindAR core -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
 
-    <!-- A-Frame -->
+    <!-- 2. A-Frame -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
-    <!-- MindAR A-Frame plugin -->
+    <!-- 3. MindAR plugin para A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
     <style>
@@ -44,68 +44,38 @@
     >
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
+      <!-- Container para os textos -->
       <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes-container" position="0 0 0">
-        <a-text
-          value="Alvo detectado!"
-          color="yellow"
-          position="0 0.9 0"
-          align="center"
-          scale="1 1 1"
-        ></a-text>
+        <a-text value="Alvo detectado!" color="yellow" position="0 0.6 0" align="center" scale="1 1 1"></a-text>
       </a-entity>
     </a-scene>
 
     <script>
-      fetch("assets/nomes.json")
-        .then((res) => res.json())
-        .then((nomes) => {
+      fetch('assets/nomes.json')
+        .then(res => res.json())
+        .then(nomes => {
           const container = document.querySelector("#lista-nomes-container");
-          const texts = [];
 
-          let index = 0;
-
-          function typeWriter(text, element, i = 0) {
-            if (i <= text.length) {
-              element.setAttribute("value", text.substring(0, i));
-              setTimeout(() => typeWriter(text, element, i + 1), 100);
-            } else {
-              // Aguarda um tempo e mostra o próximo nome
-              setTimeout(showNextName, 1000);
-            }
-          }
-
-          function showNextName() {
-            if (index >= nomes.length) return;
-
-            // Move todos os textos existentes para cima
-            texts.forEach((el) => {
-              const pos = el.getAttribute("position");
-              const newY = pos.y + 0.3;
-              el.setAttribute("position", `0 ${newY} 0`);
-            });
-
-            // Remove textos que subiram demais (ex: y > 1.5)
-            while (texts.length > 0 && texts[0].getAttribute("position").y > 1.5) {
-              const oldEl = texts.shift();
-              container.removeChild(oldEl);
-            }
-
-            // Cria novo texto na posição inicial (embaixo)
-            const nome = nomes[index];
+          nomes.forEach((nome, index) => {
             const el = document.createElement("a-text");
             el.setAttribute("value", "");
             el.setAttribute("color", "yellow");
             el.setAttribute("align", "center");
-            el.setAttribute("position", `0 0 0`);
+            el.setAttribute("position", `0 ${0.3 - index * 0.3} 0`);
             el.setAttribute("scale", "0.8 0.8 0.8");
             container.appendChild(el);
-            texts.push(el);
 
-            typeWriter(nome, el);
-            index++;
-          }
+            function typeWriter(text, element, i = 0) {
+              if (i <= text.length) {
+                element.setAttribute("value", text.substring(0, i));
+                setTimeout(() => typeWriter(text, element, i + 1), 100);
+              }
+            }
 
-          showNextName();
+            setTimeout(() => {
+              typeWriter(nome, el);
+            }, index * (nome.length * 100 + 300));
+          });
         });
     </script>
   </body>
