--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Demo com Tipagem de Texto</title>
+    <title>MindAR Demo</title>
 
     <!-- 1. MindAR core -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
@@ -21,7 +21,6 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        background-color: black;
       }
 
       a-scene {
@@ -43,28 +42,33 @@
       device-orientation-permission-ui="enabled: true"
     >
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-      <!-- Container para os textos -->
       <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes-container" position="0 0 0">
-        <a-text value="Alvo detectado!" color="yellow" position="0 0.6 0" align="center" scale="1 1 1"></a-text>
+        <!-- <a-text
+          value="Alvo detectado!"
+          color="yellow"
+          position="0 0 0"
+        ></a-text> -->
       </a-entity>
     </a-scene>
-
     <script>
-      fetch('assets/nomes.json')
-        .then(res => res.json())
-        .then(nomes => {
+      // Carrega o JSON com os nomes
+      fetch("assets/nomes.json")
+        .then((res) => res.json())
+        .then((nomes) => {
           const container = document.querySelector("#lista-nomes-container");
 
           nomes.forEach((nome, index) => {
+            // Criar o <a-text> com texto vazio inicialmente
             const el = document.createElement("a-text");
             el.setAttribute("value", "");
             el.setAttribute("color", "yellow");
             el.setAttribute("align", "center");
             el.setAttribute("position", `0 ${0.3 - index * 0.3} 0`);
             el.setAttribute("scale", "0.8 0.8 0.8");
+
             container.appendChild(el);
 
+            // Função para animar o texto letra a letra
             function typeWriter(text, element, i = 0) {
               if (i <= text.length) {
                 element.setAttribute("value", text.substring(0, i));
@@ -72,9 +76,10 @@
               }
             }
 
+            // Iniciar a animação para cada nome com atraso para não sobrepor as animações
             setTimeout(() => {
               typeWriter(nome, el);
-            }, index * (nome.length * 100 + 300));
+            }, index * 1500); // cada nome inicia após 1.5 segundos do anterior
           });
         });
     </script>
