--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Demo - Lista com Virada de Página</title>
+    <title>MindAR Demo</title>
 
-    <!-- MindAR core -->
+    <!-- 1. MindAR core -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
 
-    <!-- A-Frame -->
+    <!-- 2. A-Frame -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
 
-    <!-- MindAR A-Frame plugin -->
+    <!-- 3. MindAR plugin para A-Frame -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
 
     <style>
@@ -20,7 +20,6 @@
         padding: 0;
         height: 100%;
         width: 100%;
-        background-color: black;
       }
 
       a-scene {
@@ -41,111 +40,36 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: true"
     >
-      <!-- A câmera agora está levemente para trás -->
-      <a-camera position="0 0 1" look-controls="enabled: false"></a-camera>
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <!-- O container está um pouco na frente da câmera -->
-      <a-entity
-        mindar-image-target="targetIndex: 0"
-        id="pagina-container"
-        position="0 0 -1"
-        rotation="0 0 0"
-      >
-        <!-- Título fixo -->
+      <!-- Aqui é onde os nomes serão adicionados -->
+      <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes" position="0 0 -0.5">
         <a-text
-          value="Apoiadores"
+          value="Alvo detectado!"
           color="yellow"
           position="0 1 0"
           align="center"
-          scale="1 1 1"
         ></a-text>
       </a-entity>
     </a-scene>
 
     <script>
-      // Simulando o conteúdo do nomes.json
-      const nomes = Array.from({ length: 50 }, (_, i) => `Apoiador #${i + 1}`);
+      fetch('assets/nomes.json')
+        .then(res => res.json())
+        .then(nomes => {
+          const container = document.querySelector("#lista-nomes");
 
-      const container = document.querySelector("#pagina-container");
-      const nomesPorPagina = 7;
-      const totalPaginas = Math.ceil(nomes.length / nomesPorPagina);
-
-      let paginaAtual = 0;
-      let texts = [];
-
-      function typeWriter(text, element, pos = 0, callback) {
-        if (pos <= text.length) {
-          element.setAttribute("value", text.substring(0, pos));
-          setTimeout(() => typeWriter(text, element, pos + 1, callback), 50);
-        } else {
-          if (callback) callback();
-        }
-      }
-
-      function mostrarPagina(pagina) {
-        // Remove textos antigos
-        texts.forEach((el) => container.removeChild(el));
-        texts = [];
-
-        const inicio = pagina * nomesPorPagina;
-        const fim = Math.min(inicio + nomesPorPagina, nomes.length);
-        const nomesPagina = nomes.slice(inicio, fim);
-
-        let i = 0;
-
-        function digitarProximoNome() {
-          if (i >= nomesPagina.length) {
-            setTimeout(() => virarPagina(() => {
-              paginaAtual = (paginaAtual + 1) % totalPaginas;
-              mostrarPagina(paginaAtual);
-            }), 1500);
-            return;
-          }
-
-          const nome = nomesPagina[i];
-          const el = document.createElement("a-text");
-          el.setAttribute("value", "");
-          el.setAttribute("color", "yellow");
-          el.setAttribute("align", "center");
-          el.setAttribute("side", "double"); // visível frente e verso
-          el.setAttribute("position", `0 ${0.5 - i * 0.3} 0`);
-          el.setAttribute("scale", "0.8 0.8 0.8");
-          container.appendChild(el);
-          texts.push(el);
-
-          typeWriter(nome, el, 0, () => {
-            i++;
-            setTimeout(digitarProximoNome, 300);
+          nomes.forEach((nome, index) => {
+            const el = document.createElement("a-text");
+            el.setAttribute("value", nome);
+            el.setAttribute("color", "yellow");
+            el.setAttribute("align", "center");
+            el.setAttribute("position", `0 ${0.7 - index * 0.25} 0`);
+            el.setAttribute("scale", "0.8 0.8 0.8`);
+            el.setAttribute("side", "double"); // para garantir que aparece mesmo se o texto "virar"
+            container.appendChild(el);
           });
-        }
-
-        digitarProximoNome();
-      }
-
-      function virarPagina(callback) {
-        const duracao = 800;
-        let start = null;
-
-        function animar(time) {
-          if (!start) start = time;
-          let elapsed = time - start;
-          let progress = Math.min(elapsed / duracao, 1);
-          const rotY = 180 * progress;
-          container.setAttribute("rotation", `0 ${rotY} 0`);
-
-          if (progress < 1) {
-            requestAnimationFrame(animar);
-          } else {
-            container.setAttribute("rotation", "0 0 0");
-            callback();
-          }
-        }
-
-        requestAnimationFrame(animar);
-      }
-
-      // Inicia a primeira página
-      mostrarPagina(paginaAtual);
+        });
     </script>
   </body>
 </html>
