--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             el.setAttribute("color", "yellow");
             el.setAttribute("align", "center");
             el.setAttribute("position", `0 ${0.7 - index * 0.25} 0`);
-            el.setAttribute("scale", "0.8 0.8 0.8`);
+            el.setAttribute("scale", "0.8 0.8 0.8");
             el.setAttribute("side", "double"); // para garantir que aparece mesmo se o texto "virar"
             container.appendChild(el);
           });
