--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
       <!-- Aqui é onde os nomes serão adicionados -->
       <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes" position="0 0 -0.5">
+        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="assets/book.glb" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
         <a-text
           value="Alvo detectado!"
           color="yellow"
