--- a/index.html
+++ b/index.html
@@ -44,33 +44,33 @@
 
       <!-- Aqui é onde os nomes serão adicionados -->
       <a-entity mindar-image-target="targetIndex: 0" id="lista-nomes" position="0 0 -0.5">
-        <a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="assets/book.glb" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
-        <a-text
+        <a-gltf-model rotation="0 0 0 " position="0 0 0" scale="0.5 0.5 0.5" src="assets/book.glb" animation-mixer></a-gltf-model>
+        <!-- <a-text
           value="Alvo detectado!"
           color="yellow"
           position="0 1 0"
           align="center"
-        ></a-text>
+        ></a-text> -->
       </a-entity>
     </a-scene>
 
     <script>
-      fetch('assets/nomes.json')
-        .then(res => res.json())
-        .then(nomes => {
-          const container = document.querySelector("#lista-nomes");
+    //   fetch('assets/nomes.json')
+    //     .then(res => res.json())
+    //     .then(nomes => {
+    //       const container = document.querySelector("#lista-nomes");
 
-          nomes.forEach((nome, index) => {
-            const el = document.createElement("a-text");
-            el.setAttribute("value", nome);
-            el.setAttribute("color", "yellow");
-            el.setAttribute("align", "center");
-            el.setAttribute("position", `0 ${0.7 - index * 0.25} 0`);
-            el.setAttribute("scale", "0.8 0.8 0.8");
-            el.setAttribute("side", "double"); // para garantir que aparece mesmo se o texto "virar"
-            container.appendChild(el);
-          });
-        });
+    //       nomes.forEach((nome, index) => {
+    //         const el = document.createElement("a-text");
+    //         el.setAttribute("value", nome);
+    //         el.setAttribute("color", "yellow");
+    //         el.setAttribute("align", "center");
+    //         el.setAttribute("position", `0 ${0.7 - index * 0.25} 0`);
+    //         el.setAttribute("scale", "0.8 0.8 0.8");
+    //         el.setAttribute("side", "double"); // para garantir que aparece mesmo se o texto "virar"
+    //         container.appendChild(el);
+    //       });
+    //     });
     </script>
   </body>
 </html>
